SASSにあらかじめ使う変数をセットした。Code-kata開始!

--- a/src/scss/foundation/_colors.scss
+++ b/src/scss/foundation/_colors.scss
@@ -1,9 +1,13 @@
-$primary-text-color: #000;
-$primary-bg-color: #fff;
+$primary-color: #2d3d54;
 
-// Links
-$link-color: #666;
-$link-hover-color: #ccc;
+$secondary-color: #d03c56;
 
+$accent-color: #b5d264;
 
-$table-caption-color: $link-color;
+$primary-text-color: #333;
+
+$secondary-text-color: #666;
+
+$box-shadow: #e3e3e3;
+
+$secondary-background-color: #ccc;
