--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 @import "foundation/colors";
-@import "foundation/settings";
+@import "foundation/variables";
 @import "foundation/reset";
 @import "foundation/typography";
 
